--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
