--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
+    "axios": "^0.21.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^6.0.0-beta.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
