--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "env-cmd": "^10.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.0.0-beta.0"
   },
