--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@reduxjs/toolkit": "^1.6.0",
     "axios": "^0.21.1",
     "env-cmd": "^10.1.0",
+    "history": "^5.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.2.0",
